--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,97 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  display: block;
+  margin: 110px auto 0 auto;
+  width:70%;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+aside {
+  float:left;
+}
+
+header {
+  margin: 10px 0 0 40px;
+  height: 80px;
+}
+
+header #title-img{
+  float:left;
+}
+
+header #home-img{
+  position:relative;
+  top:5px;
+  padding-top: 10px;
+}
+
+header div {
+  float:right;
+  color: white;
+  padding:0 15px;
+  background-color: rgb(98,136,169);
+  margin-top: 10px;
+  border-radius: 5px;
+  width:inherit;
+  border:1px solid #06365f;
+  transform: scale(0.9);
+}
+
+header a {
+  font-weight: bold;
+  line-height:50px;
+  margin-left:10px;
+}
+
+main {
+  float: left;
+  width: 540px;
+}
+
+section {
+    background-image: url("../images/frame.png");
+    background-size: auto;
+    background-repeat: no-repeat;
+    padding: 30px;
+    margin: 20px 0 0 40px;
+}
+
+section h1{
+  color:#06365f;
+}
+
+footer {
+  margin: 0 auto;
+  text-align: center;
+  
+}
+
+footer nav {
+text-align: center;
+color: #1c5380;
+text-transform: uppercase;
+font-weight: bold;
+}
+
+footer nav span {
+  margin-left: 14px;
+}
+
+footer nav #copyright {
+  margin-left: 30px;
+  color: grey;
+}
+
+.clear {
+  clear:both;
+}
+
+#iphone-badge #android-badge {
+  float:left;
+}
+
+#android-badge {
+  margin-left: 20px;
 }
