--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,155 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 /*
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+*{
+  box-sizing: border-box;
+}
+.clearfloat{
+  clear: both;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("./../images/bgtile.png");
+  background-repeat: repeat-x;
+  
 }
+
+.contenido{
+  padding: 10% 15% 15% 15%;
+  align-content: center;
+}
+
+.leftcont{
+  
+  float:left;
+  width: 40%;
+}
+ 
+.rightcont{
+  float: right;
+  width: 60%;
+}
+
+.instalogo{
+  float:left;
+  width: 50%;
+}
+
+.botonlogo{
+  float: right;
+  width: 20%;
+  padding-top: 20px;
+}
+.botonlogo button{
+  padding: 10px;
+}
+
+.conttext{
+  background-image: url("./../images/frame.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  
+  width: 100%;
+  
+  padding-top: 10%;
+}
+.conttext h2{
+  font-weight: bold;
+  color: #06365f;
+  font-size: 2em;
+  padding-left: 50px;
+  width: 80%;
+}
+.conttext p{
+  padding: 10px 10px 10px 50px;
+  width: 80%;
+  font-weight: 400;
+}
+.conttext b{
+  font-weight: 800;
+}
+
+.botonlogo button{
+  background-color: #1c5380;
+  width: 100%;
+  align-content: left;
+  color: white;
+  
+}
+
+.applelogo{
+  margin-left: 30px;
+  float:left;
+  width: 30%;
+}
+
+.andrologo{
+  float:left;
+  width: 30%;
+}
+
+.links{
+  padding: 5% 15% 15% 20%;
+  align-content: center;
+}
+
+ul li{
+  list-style: none;
+  display: inline;
+  text-transform: uppercase;
+  margin-left: 10px;
+  color: #1c5380;
+  font-weight: 800;
+}
+.copyr{
+  color: gray;
+}
+
