--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,109 @@
 /*
 Colors to use:
-dark blue: #06365f
-light blue: #1c5380
+dark blue: #06365f h1
+light blue: #1c5380 enlaces
 */
-
+*{
+  box-sizing: border-box;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  padding-top: 100px;
+}
+
+#center-content {
+  width: 70%;
+  margin: auto;
+  height: auto;
+
+}
+#iphone-img{
+  float: left;
+  margin-right: 100px;
+}
+.content-class {
+   background-image: url(../images/frame.png);
+   background-repeat: no-repeat;
+   background-size: contain;
+   height: 330px;
+   width: 500px;
+   padding: 3%;
+   float: left;
+}
+h1{
+  font-size: 30px;
+  font-weight: bold;
+  color: #06365f;
+  margin-bottom: 20px;
+}
+b{
+  font-weight: bold;
+}
+
+.apple{
+  margin-left: 30px;
+}
+.paragraphs{
+  margin-top: 10px;
+  font-weight: 15;
+}
+.downloads img{
+  margin-top: 30px;
+}
+#menu ul li{
+  text-transform: uppercase;
+  text-decoration: none;
+  display: inline;
+  
+
+}
+
+#menu{
+  width: 100%;
+  text-align: center;
+  background-color: white;
+  clear: both;
+  margin-top: 90px;
+}
+#menu ul li a{
+  text-decoration: none;
+  margin-left: 8px;
+  
+  font-weight: bold;
+  color: #1c5380; 
+  
+}
+
+button {
+  color: white;
+  float:left;
+  margin-left: 70px;
+  height: 35px;
+  background-color:#7693ae;
+  display: block;
+  margin-top: 23px;
+  line-height: 35px;
+  border-radius: 2px;
+  border: none;
+  font-weight:80;
+  box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
+
+}
+button img{
+  margin-top: 2px;
+  margin-right: 4px;
+}
+.line-one{
+  display: inline-block;
+  width: 50%;
+  height: 80px;
+  line-height: 100px;
+
+}
+
+.insta{
+  float: left;
 }
