--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,101 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  box-sizing: border-box;
+  font-weight: 370;
+  color: grey;
+}
+
+section#fondo{
+  background-image: url("file:///Users/BiancaCastro/Desktop/CLASES/WEEK1/DAY-2/lab-css-instagram-clone/starter-code/images/bgtile.png");
+  height: 350px;
+  background-repeat: repeat-x;
+}
+
+#imagen-iphone{
+  position:relative;
+  top:-200px;
+  left:300px;
+}
+
+#contenido{
+  width: 40%;
+  position: absolute;
+  top:150px;
+  left:680px;
+}
+
+#cabecera{
+  width: 85%;
+}
+#home{
+  float:right;
+  border: 1px solid  #1c5380;
+  background-color: #6b8fac;
+  color:white;
+  text-decoration:none;
+  position: relative;
+  top: 20px;
+  width: 80px;
+  padding:4px;
+  font-weight: 450;
+  border-radius: 3px;
+  box-shadow: 0px 1px #06365f;
+  font-size:14px;
+  text-align: center;
+}
+#home img{
+  margin-right:8px;
+}
+
+#texto{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  padding:30px;
+  font-size: 15px;
+  
+}
+
+#claim{
+  color: #06365f;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+#strong{
+  font-weight: bold;
+  color: black;
+}
+
+.download{
+  margin:50px 10px 0 0;
+}
+
+#description{
+  width:80%;
+  line-height: 24px;
+}
+footer{
+  list-style-type: none;
+  text-transform: uppercase;
+  text-align: center;
+  color: #1c5380;
+}
+ul li{
+
+  display: inline; 
+  position: relative;
+  top: -150px;
+  margin-right:5px;
+  font-size:12px;
+  font-weight: 450;
+}
+
+#copyright{
+
+  color: grey;
 }
