--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,79 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
+}
+
+.top{
+  height: 350px;
+  background-color: #06365f;
+}
+.bottom{
+}
+
+.phone{
+position: relative;
+bottom: 185px;
+left: 185px;
+}
+.container{
+  float: right;
+  position: relative;
+  top: 185px;
+  right: 170px;
+  text-align: center;
+ 
+  width: 33%;
+
+}
+
+.container h2{
+font-size: 30px;
+color: #06365f;
+/* font-family: */
+}
+.content{
+   background-color: white;
+  border-radius: 5px;
+  box-shadow: 2px -2px 2px white;
+  /* background-image: url("../images/frame.png"); */
+}
+.foot{
+  color: #06365f;
+  text-align: center;
+  
+}
+
+.foot li{
+  list-style-type: none;
+  display: inline;
+  color: #06365f;
+  font-size: 20px;
+  padding: 0px 10px;
+  
+  
+}
+.home{
+  display: inline;
+  height: 50px;
+  width: 130px;
+  position: relative;
+  bottom: 30px;
+  left: 50px;
+  background-color: #06365f;
+  /* border: outset; */
+  border: 1px;
+  font-size: 20px;
+  color: #efefef;
+  box-shadow: 0px 0px 1px 1px black;
+}
+
+.homeimg{
+ 
+}
+
+.foot li a{
+  text-decoration: none;
+  font-weight: 600;
+  color: #06365f;
 }
