--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,66 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-position: top;
+  background-repeat: repeat-x;
+}
+header {
+  width: 400px;
+  margin: 80px 0 0 48%;
+}
+.phones{
+  position: absolute;
+  margin: 30px 0 0 180px;
+}
+.brand {
+ width: 250px;
+ margin-top: 25px;
+}
+a{
+  position: absolute;
+  text-decoration: none;
+  color: white;
+  padding: 5px 5px 5px 35px;
+  border-radius: 2px;
+  background-color: #1c5380;
+  margin: 40px 0 0 60px;
+  border: 1px 
+}
+.home{
+  position: absolute;
+  margin-right: 50px;
+}
+.superior{
+  margin: 5px 0 0 48%;
+  background-image: url("../images/frame.png");
+  background-size: 400px 450px;
+  width: 400px;
+  height: 450px;
+}
+h2{
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.3;
+  color: #06365f;
+}
+.text{
+  position: absolute;
+  margin: 20px 0 0 20px;
+  width: 330px;
+}
+.inferior{
+  margin: 0 0 500px 52%;
+  width: 400px;
+  position: absolute;
+}
+.letras{
+  color: #1c5380;
+}
+ul{
+  margin: 15 auto; 
+}
+li{
+  display: inline-block;
+  margin: 0 10px;
 }
