--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,118 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* { 
+  margin: 0;
+  padding: 0;
+}
+.container {
+  Width: 1600px;  
+  Margin: 0 auto;
+}
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  text-align: center;
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;  
 }
+.global{
+  margin-top: 5%;
+  margin-left: 15%;
+}
+.mobile {
+  float: left;
+  width: 22%;
+  margin-right: 1%;
+}
+.insta-text{
+  float: left;
+  width: 33%;
+  margin-top: 2%;
+}
+header{
+  width: 100%;
+  float: left;
+}
+#insta-logo {
+  float: left;
+  width: 65%;
+  margin-left: 0.5%;
+}
+#home-logo{
+  width: 30%;
+  float: left;
+}
+
+.home-button{
+  background-image: url("../images/bgtile.png");
+  border: 1px solid #06365f;
+  border-radius: 2.5px;
+  float: right;
+  margin-top: 4%;
+  margin-right: 2%;
+  width: 18%;
+  padding: 1.5% 2%;  
+}
+.home-button h5{
+  float: right;  
+  margin-top: 1%;
+  color: aliceblue;
+  font-size: 18px;
+}
+article {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  margin: 20% 0 4% 0;
+  line-height: 1.35em;
+  padding-top: 1.7%;
+}
+article h3{
+  text-align: left;
+  color: #06365f;
+  font-weight: bold;
+  font-size: 22px;
+  width: 50%;
+  margin-top: 5%;
+  margin-left: 6.5%;
+  margin-bottom: 4%;
+  
+}
+article p{
+  text-align: left;
+  margin-left: 6.5%;
+  margin-right: 5%;
+  font-weight: 400;  
+}
+
+section footer{
+  text-align: left;
+  margin-left: 5%;
+}
+section footer img{
+  margin: 2%;
+}
+.links{
+  text-align: center;
+  width: 50%;
+  clear: both;
+  padding-top: 2%;
+}
+footer ul{
+  margin-left: 6%;
+}
+footer ul li{
+  font-size: 12px;
+  font-weight: bold;
+  color: #1c5380;
+  margin: 0 1%;
+  float: left;
+  list-style-type: none;
+}
+.ltd{
+  color: darkgrey;
+}
+
+
+
