--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,50 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+@import url('https://fonts.googleapis.com/css?family=Mali|Open+Sans');
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+ }
+.half-content{
+  background-image:url("../images/bgtile.png");
+  background-repeat: repeat-y no-repeat;
+  height: 300px;
+}
+.col-phones{
+  margin-top: 100px;
+  margin-left: 20%;
+  margin-right: 5%;
+  float: left;
+
+}
+.col-text{
+  margin-left: 20px;
+  padding-top: 150px;
+  background-image: URl("../images/frame.png");
+  background-repeat: no-repeat;
+}
+.download-images{
+display: inline;
+}
+
+.links{
+  margin-top: 30%;
+  margin-left: 30%;
+}
+li{
+  display: inline;
+  margin: 10px;
+}
+#brand{
+  margin-bottom: 20px;
+}
+h2{
+  color: #06365f;
+  font-family: 'Mali', cursive;
+  font-size: 40px;
+}
+#main-text{
+  margin-top: 12px;
+  margin-bottom: 30px;
 }
