--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,49 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 14px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-position: top;
+  background-repeat: repeat-x;
+}
+h1 {
+  font-weight: 500;
+  font-size: 1.4em;
+  color: #06365f;
+}
+#central {
+  width: 800px;
+  margin: 0 auto;
+  padding-top: 100px;
+}
+.phone {
+  float: left;
+  width: 30%;
+}
+.main {
+  float: right;
+  width: 50%;
+}
+.folio {
+  position: absolute;
+  left: 750px;
+  top: 225px;
+  width: 400px;
+}
+.badge {
+  padding-left: 40px;
+}
+footer {
+  width: 700px;
+  margin: 0 auto;
+  padding-top: 40px;
+}
+footer ul {
+  display: block;
+  float: left;
+}
+footer li {
+  display: inline-block;
+  margin: 0 10px;
 }
