--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,105 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/phones.png");
+  background-repeat: no-repeat;
+  background-position: relative;
+  background-position-x: 10%;
+  background-position-y: 30%;
+  background-color: #ffffff;
+  /*background: linear-gradient(to bottom, #1c5380 30%, #ffffff 70%);*/
+
+  /*background: #ffffff;
+  background-image: url("../images/phones.png"), linear-gradient(#1c5380, #ffffff);
+  background-repeat: no-repeat;
+  background-position: relative;
+  background-position-x: 10%;
+  background-position-y: 30%;*/
+}
+
+.logo {
+  position: relative;
+  margin-top: 5%;
+  margin-bottom: 1%;
+}
+
+.insta-logo {
+  margin-left: 30.5%;
+  margin-bottom: -1.7%;
+}
+
+.home {
+  position: relative;
+  margin-left: 8%;
+  background-color: #5392c6;
+  border: solid 1px #06365f;
+  color: white;
+  padding: 10px 24px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 3px;
+}
+
+.white-back-drop {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: left;
+  width: 35%;
+  position: relative;
+  left: 30%;
+}
+
+.heading {
+  color: #06365f;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 32px;
+  margin-left: 8%;
+  padding-top: 9%;
+}
+
+p {
+  margin-left: 8%;
+  font-size: 21px;
+}
+
+.para3 {
+  margin-bottom: 5%;
+}
+.download-buttons {
+  margin-left: 5%;
+  margin-bottom: 30%;
+}
+
+.button2 {
+  margin-left: 5%;
+}
+
+.bottom-nav {
+  position: relative;
+  left: 30%;
+  font-weight: bold;
+  color: #06365f;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+
+.bottom-nav > .cr {
+  color: gray;
+}
+
+a {
+  padding-right: 1%;
+}
+
+a:link {
+  color: #1c5380;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #1c5380;
+  text-decoration: none;
 }
