--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,80 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.top{
+  background-color: #517799;
+  color:white;
+  height:300px;
+}
+
+#brand {
+  margin-left: 550px;
+  margin-top: 100px;
+}
+
+button {
+  background-color: #1c5380;
+  color:white;
+  margin-top: 100px;
+  margin-left: 80px;
+  
+}
+
+#home {
+  padding-right: 10px;
+
+}
+
+#phone {
+  margin-left: 200px;
+  margin-top: -200px;
+}
+#frame {
+  float: right;
+  margin-right: 200px;
+  margin-top: -100px;
+}
+
+h3 {
+  position: absolute;
+  margin-left: 625px;
+  font-size: 25px;
+  color: #06365f;
+  margin-top: -375px;
+}
+
+div {
+  float:right;
+  margin-left: 625px;
+
+  margin-right: 300px;
+  margin-top: -300px;
+
+}
+
+p {
+  color:black;
+}
+
+#iphone {
+  padding-right: 20px;
+}
+
+ul {
+  margin-left: 350px;
+  padding-top: 40px;
+  padding-bottom: 20px;
+}
+ul li {
+  list-style: none;
+  /* text-align: center; */
+  display: inline;
+  padding-right: 10px;
+  color:#1c5380;
+  
+}
+
+#copyright {
+  color:gray;
+}
