--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,82 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.movilesfoto{
+  width: 25%;
+  margin: 80px 15px 10px 250px;
+  float: left;
+}
+
+.derecha {
+  width: 33%;
+  margin: 80px 0px 10px 0px;
+  float: left;
+}
+
+.arribaderecha button{
+  color: white;
+  background-color: #1c5380;
+  padding: 10px 20px;
+  font-size: 13px;
+  position: relative;
+  bottom: 30px;
+  left: 50px;
+  border: 1px;
+  border-color: #000;
+  box-shadow: 0px 1px 1px #222;
+}
+
+.arribaderecha button b {
+  position: relative;
+  bottom: 5px;
+  left: 10px;
+}
+.especifico{
+  font-size: 15px;
+
+}
+.abajoderecha {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  padding: 20px 40px;
+}
+
+.abajoderecha img{
+  margin-top: 10px;
+}
+
+.abajoderecha .foto3{
+  margin-left: 10px;
+}
+
+.right h2 {
+  color: #06365f;
+}
+
+.footer{
+  clear: both;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 13px;
+  padding-right: 6%;
+  padding-top: 10px;
+}
+
+.footer ul li{
+  list-style-type: none;
+  display: inline;
+  margin-left: 10px;
+  font-weight: bold;
+}
+
+.footer a {
+  color: #1c5380;
+  text-decoration: none;
+}
+
+.footer .copyright {
+  color:grey; 
 }
