--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,71 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  color:#06365f;
 }
+
+.blueBackround{
+  width: 100%;
+  height: 30%;
+  position: fixed;
+    top: 0;
+    right: 0;
+  background-color: #1c5380;
+  z-index: -1;
+}
+
+.container {
+  width: 80%;
+  margin: auto;
+}
+div.telephoneImage{
+  
+}
+ div.loginButton > div {
+  float: left;
+}
+
+.loginButton {
+  border: 1px solid black;
+}
+
+
+.phones {
+
+}
+
+ul >li {
+  display: inline;
+}
+
+.content {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: flex-start;
+}
+.secondColumn, .firstColumn {
+  width: 40%;
+  margin-top: 10%;
+}
+
+.loginButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loginButton>img, .loginButton>p {
+  margin-right: 20px;
+}
+
+.loginButton>img {
+}
+
+.instagramLogo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
